# pixel-core

./: .gitmodules  CMakeLists.txt  D.cmake  Dependencies.cmake  README.md  imgui.ini
Engine/: CMakeLists.txt
Engine/include/: Engine.h  enginepch.h
Engine/include/Common/Core/: Application.h  Assert.h  Library.h  Timestep.h  Window.h
Engine/include/Common/Event/: MouseEvent.h  WindowEvent.h
Engine/include/Common/Input/: Input.h  KeyCodes.h
Engine/include/Common/Layer/: GuiLayer.h  Layer.h  LayerStack.h
Engine/include/Common/Renderer/: GraphicsContext.h  Renderer.h  RendererAPI.h  RendererCommand.h
Engine/include/Common/Renderer/Buffer/: FrameBuffer.h  IndexBuffer.h  VertexBuffer.h
Engine/include/Common/Renderer/Camera/: Camera.h  OrthographicCamera.h  PerspectiveCamera.h
Engine/include/Common/Renderer/Light/: Light.h  ShadowCamera.h
Engine/include/Common/Renderer/Material/: Material.h
Engine/include/Common/Renderer/Shader/: Shader.h
Engine/include/Common/Renderer/Texture/: Texture.h
Engine/include/Foundation/Core/: Assert.h  FileDialogs.h  Library.h  Log.h  Window.h
Engine/include/Foundation/Event/: Event.h  KeyEvent.h  MouseEvent.h
Engine/include/Foundation/Input/: MouseCodes.h
Engine/include/Foundation/Layer/: GuiLayer.h  Layer.h
Engine/include/Foundation/Layer/Gui/: GuiBackend.h  GuiLayer.h
Engine/include/Foundation/Renderer/: Renderer.h  RendererAPI.h  RendererCommand.h  RendererUtils.h
Engine/include/Foundation/Renderer/Camera/: Camera.h
Engine/include/Foundation/Renderer/Light/: EnvironmentLight.h
Engine/include/Platform/Metal/: MetalContext.h  MetalRendererAPI.h
Engine/include/Platform/Metal/Buffer/: MetalFrameBuffer.h  MetalIndexBuffer.h  MetalVertexBuffer.h
Engine/include/Platform/Metal/Drawable/: MetalDrawable.h
Engine/include/Platform/Metal/Gui/: MetalGuiBackend.h
Engine/include/Platform/Metal/Texture/: MetalTexture.h  MetalTexture1D.h  MetalTexture2D.h  MetalTexture3D.h  MetalTextureCube.h  MetalTextureUtils.h
Engine/include/Platform/OpenGL/: OpenGLContext.h  OpenGLRendererAPI.h
Engine/include/Platform/OpenGL/Buffer/: OpenGLFrameBuffer.h  OpenGLIndexBuffer.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
Engine/include/Platform/OpenGL/Drawable/: OpenGLDrawable.h
Engine/src/Common/Core/: Application.cpp  Window.cpp
Engine/src/Common/Input/: Input.cpp
Engine/src/Common/Layer/: GuiLayer.cpp
Engine/src/Common/Renderer/: Renderer.cpp  RendererCommand.cpp
Engine/src/Common/Renderer/Buffer/: FrameBuffer.cpp  VertexBuffer.cpp
Engine/src/Common/Renderer/Camera/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
Engine/src/Common/Renderer/Model/: AssimpModel.cpp
Engine/src/Common/Renderer/Shader/: Shader.cpp
Engine/src/Common/Renderer/Texture/: Texture2D.cpp  TextureCube.cpp
Engine/src/Foundation/Core/: Application.cpp  Log.cpp  Window.cpp
Engine/src/Foundation/Layer/: GuiLayer.cpp  LayerStack.cpp
Engine/src/Foundation/Layer/Gui/: GuiLayer.cpp
Engine/src/Foundation/Renderer/: GraphicsContext.cpp  Renderer.cpp  RendererAPI.cpp  RendererCommand.cpp
Engine/src/Foundation/Renderer/Camera/: PerspectiveCamera.cpp
Engine/src/Foundation/Renderer/Drawable/: Drawable.cpp
Engine/src/Foundation/Scene/: Scene.cpp
Engine/src/Platform/API/Metal/: MetalContext.mm  MetalRendererAPI.mm
Engine/src/Platform/API/OpenGL/: OpenGLContext.cpp  OpenGLRendererAPI.cpp
Engine/src/Platform/OS/Generic/: FileDialogs.cpp
Engine/src/Platform/OS/MacOS/: FileDialogs.mm
Engine/src/Platform/OS/Windows/: FileDialogs.cpp
pixc/: CMakeLists.txt
pixc/include/: pixc.h  pixcpch.h
pixc/include/Foundation/Core/: Application.h  Assert.h  Library.h  Resources.h  Timer.h  Window.h
pixc/include/Foundation/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
pixc/include/Foundation/Input/: Input.h  KeyCodes.h  MouseCodes.h
pixc/include/Foundation/Layer/: Layer.h  LayerStack.h
pixc/include/Foundation/Layer/Gui/: GuiBackend.h  GuiLayer.h
pixc/include/Foundation/Layer/Rendering/: RenderingLayer.h
pixc/include/Foundation/Renderer/: GraphicsContext.h  Renderer.h  RendererAPI.h  RendererCommand.h  RendererTypes.h  RendererUtils.h
pixc/include/Foundation/Renderer/Buffer/: Buffer.h  Data.h  FrameBuffer.h  IndexBuffer.h  VertexBuffer.h
pixc/include/Foundation/Renderer/Camera/: Camera.h  OrthographicCamera.h  PerspectiveCamera.h
pixc/include/Foundation/Renderer/Drawable/: Drawable.h
pixc/include/Foundation/Renderer/Light/: DirectionalLight.h  Light.h  (+4 more)
pixc/include/Foundation/Scene/: RenderPass.h  Scene.h  Viewport.h
pixc/include/Platform/Metal/: MetalContext.h  MetalRendererAPI.h  MetalRendererUtils.h  MetalStateDescriptor.h
pixc/include/Platform/OpenGL/: OpenGLContext.h  OpenGLRendererAPI.h  OpenGLRendererUtils.h
pixc/shaders/base/: SimpleColor.glsl  SimpleColor.metal  SimpleColorTexture.glsl  SimpleColorTexture.metal  SimpleTexture.glsl  SimpleTexture.metal
pixc/shaders/depth/: DepthMap.metal
pixc/shaders/environment/: CubeMap.glsl  CubeMap.metal  EquirectangularMap.glsl  EquirectangularMap.metal
pixc/shaders/environment/chunks/: SHAmbientIsotropic.glsl  SHAmbientIsotropic.metal  SHIrradiance.glsl  SHIrradiance.metal
pixc/shaders/environment/sh/: SphericalHarmonics.glsl  SphericalHarmonics.metal
pixc/shaders/forward/depth/: DepthOnly.glsl  LinearDepth.glsl  LinearDepth.metal
pixc/shaders/forward/unlit/: Unlit.glsl  Unlit.metal
pixc/shaders/phong/: PhongColor.glsl  PhongColor.metal  PhongColorShadow.glsl  PhongTexture.glsl  PhongTexture.metal  PhongTextureShadow.glsl  SHPhongColor.glsl  SHPhongColor.metal
pixc/shaders/phong/chunks/: Phong.glsl  Phong.metal  PhongSpecular.glsl  PhongSpecular.metal
pixc/shaders/shared/utils/: Attenuation.glsl  Attenuation.metal  CubemapDir.metal  Saturate.glsl
pixc/src/Foundation/Core/: Application.cpp  Log.cpp  Window.cpp
pixc/src/Foundation/Input/: Input.cpp
pixc/src/Foundation/Layer/: LayerStack.cpp
pixc/src/Foundation/Renderer/: GraphicsContext.cpp  Renderer.cpp  RendererAPI.cpp  RendererCommand.cpp
pixc/src/Foundation/Scene/: Scene.cpp
(+208 files in other folders)
